--- a/frontend/src/app/settings/settings.component.scss
+++ b/frontend/src/app/settings/settings.component.scss
@@ -42,3 +42,7 @@ mat-sidenav-content {
   display: flex;
   flex-direction: column;
 }
+
+.expand-icon {
+  min-width: 24px;
+}
